@@ -50,7 +50,7 @@ public class ArrayListTest extends junit.framework.TestCase {
 
         ArrayList subList = new ArrayList();
         for (int i = -50; i < 150; i++)
-            subList.add(new Integer(i));
+            subList.add(Integer.valueOf(i));
         new Support_ListTest("", subList.subList(50, 150)).runTest();
     }
 
@@ -518,7 +518,7 @@ public class ArrayListTest extends junit.framework.TestCase {
         assertTrue("Returned false for valid element", alist
                 .contains(objArray[99]));
         assertTrue("Returned false for equal element", alist
-                .contains(new Integer(8)));
+                .contains(Integer.valueOf(8)));
         assertTrue("Returned true for invalid element", !alist
                 .contains(new Object()));
         assertTrue("Returned true for null but should have returned false",
@@ -607,7 +607,7 @@ public class ArrayListTest extends junit.framework.TestCase {
      */
     public void test_lastIndexOfLjava_lang_Object() {
         // Test for method int java.util.ArrayList.lastIndexOf(java.lang.Object)
-        alist.add(new Integer(99));
+        alist.add(Integer.valueOf(99));
         assertEquals("Returned incorrect index", 100, alist
                 .lastIndexOf(objArray[99]));
         assertEquals("Returned index for invalid Object", -1, alist
@@ -1213,7 +1213,7 @@ public class ArrayListTest extends junit.framework.TestCase {
 
         objArray = new Object[100];
         for (int i = 0; i < objArray.length; i++) {
-            objArray[i] = new Integer(i);
+            objArray[i] = Integer.valueOf(i);
         }
 
         alist = new ArrayList();
