@@ -65,7 +65,7 @@ public class LinkedListTest extends junit.framework.TestCase {
 
         LinkedList subList = new LinkedList();
         for (int i = -50; i < 150; i++)
-            subList.add(new Integer(i));
+            subList.add(Integer.valueOf(i));
         new Support_ListTest("", subList.subList(50, 150)).runTest();
     }
 
@@ -411,7 +411,7 @@ public class LinkedListTest extends junit.framework.TestCase {
     public void test_lastIndexOfLjava_lang_Object() {
         // Test for method int
         // java.util.LinkedList.lastIndexOf(java.lang.Object)
-        ll.add(new Integer(99));
+        ll.add(Integer.valueOf(99));
         assertEquals("Returned incorrect index",
                 100, ll.lastIndexOf(objArray[99]));
         assertEquals("Returned index for invalid Object", -1, ll
@@ -996,11 +996,11 @@ public class LinkedListTest extends junit.framework.TestCase {
      * java.util.LinkedList#Serialization()
      */
     public void test_serialization() throws Exception {
-        assertTrue(ll.add(new Integer(1)));
-        assertTrue(ll.add(new Integer(2)));
-        assertTrue(ll.add(new Integer(3)));
-        assertTrue(ll.add(new Integer(4)));
-        assertTrue(ll.add(new Integer(5)));
+        assertTrue(ll.add(Integer.valueOf(1)));
+        assertTrue(ll.add(Integer.valueOf(2)));
+        assertTrue(ll.add(Integer.valueOf(3)));
+        assertTrue(ll.add(Integer.valueOf(4)));
+        assertTrue(ll.add(Integer.valueOf(5)));
         SerializationTest.verifySelf(ll, new SerializableAssert() {
             public void assertDeserialized(Serializable initial,
                     Serializable deserialized) {
@@ -1020,7 +1020,7 @@ public class LinkedListTest extends junit.framework.TestCase {
 
         objArray = new Object[100];
         for (int i = 0; i < objArray.length; i++) {
-            objArray[i] = new Integer(i);
+            objArray[i] = Integer.valueOf(i);
         }
 
         ll = new LinkedList();
